# eAP_dataset

./: .gitignore  README.md  index.html  pyproject.toml  requirements.txt
assets/data/: release_catalog.json
configs/: 20250529_regenerate.json  20250531_89fvtHGHx2.json  20250531_test copy 3.json  20250602_HDR_vis.json  20250602_chose.json  20250602_night_vis.json  20250602_pse_lite_single.json  20250602_test1.json  20250602_test1copy.json  20250602_test2.json  20250602_test3.json  20250602_test4.json  20250602_testxxx.json  20250615_finaltestset_vis.json  20250666_chose_all.json  20250666_chose_tmp.json  20250666_chose_xxxx.json  20251005_pse7_test.json  20260127_pse_lite.json  20260305_pse75.json
docs/: index.html
release_visualizer/: requirements.txt  sample_release_frames.py  visualize_release_sequence.py
tools/: anno_utils.py  compare_pkl.py  handle_anno.py  jpgs_to_mp4.py
